--- a/postman/schemas/ionia.yaml
+++ b/postman/schemas/ionia.yaml
@@ -9,7 +9,7 @@ servers:
 paths:
   /user:
     get:
-      summary: 'IONIA CALLS!!!!'
+      summary: 'REMEMBER!!!!'
       operationId: listUser
       tags:
         - user
