--- a/postman/schemas/ionia.yaml
+++ b/postman/schemas/ionia.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   version: '1.0'
-  title: 'Runeterra 12345qwqwq'
+  title: 'Runeterra 12345'
   license:
     name: MIT
 servers:
